manageUser logs out started input layout

--- a/public/styles/reference.scss
+++ b/public/styles/reference.scss
@@ -6,6 +6,7 @@
 @import "routes/login";
 @import "routes/home";
 @import "routes/adminHome";
+@import "routes/manageUser";
 
 //DIRECTIVES
 @import "routes/headerDirective";
