--- a/public/styles/routes/_home.scss
+++ b/public/styles/routes/_home.scss
@@ -10,7 +10,7 @@
     @include flex(center, flex-start);
     @include wxh(500px, 138px);
     flex-direction: column;
-    // background-color: slateblue;
+    background-color: slateblue;
 
   }
 
