--- a/public/styles/routes/_manageUser.scss
+++ b/public/styles/routes/_manageUser.scss
@@ -1,103 +1,110 @@
-// .center-of-manageUsers {
-//   display: flex;
-//   flex-direction: column;
-//   justify-content: center;
-//   align-items: center;
-//   background-color: $blue;
-//   height: 100vh;
-// }
+* {
+  position: relative;
+  -webkit-font-smoothing: antialiased;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 
-.make-user-title {
-  display: flex;
-  right: 228px;
-  width: auto;
-  color: $off-white;
-  font-family: $font;
-  font-size: 50px;
-  border-bottom: 2px solid $off-white;
-  background: salmon;
-  margin-bottom: 6px;
-  margin-top: 100px;
-  line-height: normal;
-}
-.make-user-container {
-  display: inline-block;
-  font-family: $font;
-  font-size: 20px;
-  color: $off-white;
-  background-color: teal;
-  width: 370px;
-  margin: 0px 30px;
-}
-
-.ifield-container {
-  width: auto;
-  height: 210px;
-  @include flex(center, stretch);
-  background-color: tan;
-}
-
-#input-margins {
-  @include input();
-  bottom: 20px;
-  margin-top: 20px;
-}
-
-// @mixin input() {
-//   @include wxh(370px, 53px);
-//   outline: none;
-//   border: 0px solid;
-//   text-indent: 12px;
-//   margin-top: 10px;
-//   font-family: $font;
-//   font-size: 20px;
-//   background-color: $off-white;
-//   color: $off-black;
-// }
-
-.checkbox-div {
-  background-color: olive;
-  width: 180px;
-  height: 40px;
-  top: 30px;
-  margin-left: 190px;
-}
-
-.make-user-button {
-  @include wxh(195px, 50px);
-  @include button-maker ($green, #fff);
-  text-align: center;
-  @include flex(center, center);
-  font-family: $font;
-  font-size: 20px;
-  margin-top: 61px;
-  padding-top: 18px;
-}
-
-make-user-button:hover {
-  background-color: $light-green;
-}
-
-make-user-button:focus {
-  outline: 0;
-}
-
-//***************************************
-@media (max-width: 860px) {
-  // .ifield-container {
-  //   width: auto;
-  //   height: 210px;
-  //   @include flex(center, stretch);
-  //   background-color: tan;
-  // }
+  .make-user-title {
+    display: flex;
+    right: 228px;
+    width: auto;
+    color: $off-white;
+    font-family: $font;
+    font-size: 50px;
+    border-bottom: 2px solid $off-white;
+    background: salmon;
+    margin-bottom: 6px;
+    margin-top: 100px;
+    line-height: normal;
+  }
   .make-user-container {
+    display: inline-block;
+    font-family: $font;
     font-size: 20px;
-    width: 270px;
-    margin: 0px 15px;
-  }
-  #input-margins {
-    width: 270px;
+    color: $off-white;
+    background-color: teal;
+    width: 370px;
+    margin: 0px 30px;
   }
 
+  .ifield-container {
+    width: auto;
+    height: 210px;
+    @include flex(center, stretch);
+    background-color: tan;
+  }
+
+  #input-margins {
+    @include input();
+    bottom: 20px;
+    margin-top: 20px;
+  }
+
+  // @mixin input() {
+  //   @include wxh(370px, 53px);
+  //   outline: none;
+  //   border: 0px solid;
+  //   text-indent: 12px;
+  //   margin-top: 10px;
+  //   font-family: $font;
+  //   font-size: 20px;
+  //   background-color: $off-white;
+  //   color: $off-black;
+  // }
+
+  .checkbox-div {
+    background-color: olive;
+    width: 180px;
+    height: 40px;
+    top: 30px;
+    margin-left: 190px;
+  }
+
+  // .make-user-button {
+  //   @include wxh(195px, 50px);
+  //   @include button-maker ($green, #fff);
+  //   // text-align: center;
+  //   @include flex(center, center);
+  //   // -webkit-box-sizing: border-box;
+  //   // -moz-box-sizing: border-box;
+  //   // box-sizing: border-box;
+  //   font-family: $font;
+  //   font-size: 20px;
+  //   margin-top: 61px;
+  //   // padding-top: 18px;
+  // }
+  button {
+    @include wxh(195px, 50px);
+    @include button-maker ($green, #fff);
+    font-size: 20px;
+    margin-top: 25px;
+  }
+  
+  make-user-button:hover {
+    background-color: $light-green;
+  }
+
+  make-user-button:focus {
+    outline: 0;
+  }
+
+  //***************************************
+  @media (max-width: 860px) {
+    // .ifield-container {
+    //   width: auto;
+    //   height: 210px;
+    //   @include flex(center, stretch);
+    //   background-color: tan;
+    // }
+    .make-user-container {
+      font-size: 20px;
+      width: 270px;
+      margin: 0px 15px;
+    }
+    #input-margins {
+      width: 270px;
+    }
+  }
 
 }
