iphone media query create user

--- a/public/styles/routes/_headerDirective.scss
+++ b/public/styles/routes/_headerDirective.scss
@@ -125,6 +125,7 @@
         display:none;
       }
       #iphone-header {
+        z-index: 2;
         position: fixed;
         top: 0;
         left: 0;
