--- a/public/styles/routes/_login.scss
+++ b/public/styles/routes/_login.scss
@@ -99,6 +99,7 @@
     width: 92%;
     line-height: 63px;
     margin-top: 15px;
+    left: 6px;
     // background-color: darkseagreen;
   }
   /////////////////////////// RIGHT ///////////////////////////
@@ -236,6 +237,9 @@
       display: inline;
     }
 
+    .description {
+      left: 8px;
+    }
     .bottom-links {
       display: none;
     }
@@ -275,6 +279,7 @@
       overflow-x:hidden;
       overflow-y:scroll;
     }
+
   }
   //***************************************
     @media (max-width: 550px) {
@@ -314,13 +319,16 @@
       .title-logo-box {
         max-width: 409px;
       }
+      .title {
+        margin-left: -10px;
+      }
       .logo {
         margin-bottom: 20px;
       }
       .description {
         font-size: 22px;
         margin-top: 0;
-        margin-right: 10px;
+        margin-right: 25px;
       }
       .container {
         @include flex(center, center);
@@ -355,7 +363,6 @@
         font-size: 53px;
         text-align: center;
         color: $off-white;
-        margin-left: 7px;
       }
       .logo {
         margin-bottom: 17px;
@@ -370,7 +377,8 @@
       .description {
         font-size: 17px;
         text-align: center;
-        margin: 0 auto;
+        // margin-right: 32px;
+        left: 4px;
       }
     }
 }
